examples/sample-golang-project/example-deployment/example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-golang-app
  labels:
    app: example-golang-app
spec:
  selector:
    matchLabels:
      app: example-golang-app
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: example-golang-app
    spec:
      containers:
      - name: example-golang-app
        imagePullPolicy: Always
        image: registry-svc.default.svc.cluster.local:5000/gitadmin/example-golang-app
        ports:
        - containerPort: 5000
